# vcpkg_actions

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  tests.cpp  utils.cpp  utils.h  vcpkg.json
.github/workflows/: windows-x64-msvc.yml
